yaml/nginx.svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
  labels:
    app: nginx
  name: nginx
  namespace: isnyder
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: nginx
