yaml/nginx.vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx
  namespace: isnyder
  labels:
    app: nginx
spec:
  gateways:
  - istio-system/dl-services-gateway
  - istio-system/dl-services-l7-gateway
  - istio-system/istio-autogenerated-k8s-ingress
  hosts:
  - *
  http:
  - name: isnyder-nginx
    match:
    - uri:
        prefix: /nginx/
    rewrite:
      uri: /
    route:
    - destination:
        host: nginx.isnyder.svc.cluster.local
        port:
          number: 80
